--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -41,6 +41,9 @@
           <a href="/make-reservation">Book Now</a>
         </li>
         <li>
+          <a href="/search-availability">Search Availability</a>
+        </li>
+        <li>
           <a href="/contact">Contact</a>
         </li>
       </ul>
