feat: add error helpers

--- a/static/css/website.css
+++ b/static/css/website.css
@@ -57,3 +57,13 @@ h6 {
 .form-control .error {
   color: #d80032;
 }
+
+.reservation-summary-table {
+  border-collapse: collapse;
+}
+
+.reservation-summary-table td {
+  border: 1px solid black;
+  min-width: 100px;
+  padding: 4px;
+}
